 <resources>
    <string name="app_name">Smart Card</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="code">Code</string>
    <string name="forgot_password">forgot password?</string>
    <string name="login">Log in</string>
    <string name="password">Password</string>
     <string name="create_password">Create Password</string>
     <string name="email">Email</string>
     <string name="name_as_per_adhaar_card">Name as per Adhaar card</string>
     <string name="email_address">Email Address</string>
     <string name="phone_number">Phone Number</string>
     <string name="date_of_birth">Date of Birth</string>
     <string name="address">Address</string>
     <string name="state">State</string>
     <string name="pincode">Pincode</string>

 </resources>