<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="730dp"
    tools:context=".ui.gallery.PersonalDetailsFragment">


    <EditText
        android:id="@+id/full_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/textfield_shape"
        android:hint="@string/name_as_per_adhaar_card"
        android:maxLength="20"
        android:maxLines="1"
        android:padding="10dp"
        android:paddingStart="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintWidth_percent="0.8"
        android:autofillHints="As per adhaar card" />

    <EditText
        android:id="@+id/emailaddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/textfield_shape"
        android:hint="@string/email_address"
        android:maxLength="50"
        android:maxLines="1"
        android:padding="10dp"
        android:layout_marginTop="8dp"
        android:paddingStart="10dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/full_name"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/textfield_shape"
        android:hint="@string/phone_number"
        android:inputType="number"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="10dp"
        android:layout_marginTop="8dp"
        android:paddingStart="10dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailaddress"
        app:layout_constraintWidth_percent="0.8" />

    <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@drawable/textfield_shape"
            app:layout_constraintWidth_percent="0.8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone">

            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:checked="true"
                android:text="Male" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:text="Female" />

            <RadioButton
                android:id="@+id/others"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Others" />

        </RadioGroup>

        <EditText
            android:id="@+id/birth_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="Date of Birth  (YYYY-MM-DD)"
            android:inputType="date"
            android:padding="10dp"
            android:paddingStart="10dp"
            android:background="@drawable/textfield_shape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            app:layout_constraintWidth_percent="0.8" />

        <EditText
            android:id="@+id/address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:hint="@string/address"
            android:padding="10dp"
            android:paddingStart="10dp"
            android:background="@drawable/textfield_shape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.8"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/birth_date" />

        <EditText
            android:id="@+id/state"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="text"
            android:maxLines="1"
            android:hint="@string/state"
            android:padding="10dp"
            android:paddingStart="10dp"
            android:background="@drawable/textfield_shape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.8"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address" />

        <EditText
            android:id="@+id/pincode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="number"
            android:maxLength="6"
            android:maxLines="1"
            android:hint="@string/pincode"
            android:padding="10dp"
            android:paddingStart="10dp"
            android:background="@drawable/textfield_shape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.8"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/state" />

    <TextView
        android:id="@+id/warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#F10A0A"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pincode" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pincode"
        app:layout_constraintVertical_bias="0.5" />


</androidx.constraintlayout.widget.ConstraintLayout>